tseditor: a temporary hack to avoid the table jumping
The sudden button appearance should *not* provoke a table jump to the bottom.

--- a/tsview/tsview_static/tseditor.css
+++ b/tsview/tsview_static/tseditor.css
@@ -64,6 +64,13 @@
     color: white;
 }
 
+.invisible {
+    padding: 0.5rem 0.5rem;
+    background: white;
+    color: white;
+}
+
+
 .row-editing {
     color: purple;
 }
